[project]
name = "pos-2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==23.2.1",
    "aiogram==3.2.0",
    "aiogram-dialog==2.1.0",
    "aiohttp==3.9.1",
    "aiosignal==1.3.1",
    "annotated-types==0.6.0",
    "anyio==4.9.0",
    "appnope==0.1.4",
    "asttokens==2.4.1",
    "async-timeout==4.0.3",
    "asyncclick==8.1.8.0",
    "attrs==23.1.0",
    "backcall==0.2.0",
    "betterlogging==0.2.1",
    "cachetools==5.3.3",
    "certifi==2023.11.17",
    "comm==0.2.1",
    "debugpy==1.8.1",
    "decorator==5.1.1",
    "dnspython==2.6.1",
    "docx>=0.2.4",
    "environs==9.5.0",
    "exceptiongroup==1.3.0",
    "executing==2.0.1",
    "frozenlist==1.4.0",
    "idna==3.6",
    "importlib-metadata==7.0.1",
    "ipykernel==6.29.2",
    "ipython==8.12.3",
    "jedi==0.19.1",
    "jinja2==3.1.4",
    "jupyter-client==8.6.0",
    "jupyter-core==5.7.1",
    "lxml==5.2.2",
    "magic-filter==1.0.12",
    "markupsafe==2.1.5",
    "marshmallow==3.20.1",
    "matplotlib-inline==0.1.6",
    "motor==3.3.2",
    "multidict==6.0.4",
    "mypy==1.9.0",
    "mypy-extensions==1.0.0",
    "nest-asyncio==1.6.0",
    "packaging==23.2",
    "parso==0.8.3",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "platformdirs==4.2.0",
    "prompt-toolkit==3.0.43",
    "psutil==5.9.8",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pydantic==2.5.2",
    "pydantic-core==2.14.5",
    "pygments==2.17.2",
    "pymongo==4.6.3",
    "python-dateutil==2.8.2",
    "python-docx==1.1.2",
    "python-dotenv==1.0.0",
    "pytz==2024.1",
    "pyzmq==25.1.2",
    "redis==5.1.0a1",
    "six==1.16.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "tomli==2.0.1",
    "tornado==6.4",
    "traitlets==5.14.1",
    "typing-extensions==4.9.0",
    "watchdog==4.0.0",
    "wcwidth==0.2.13",
    "yarl==1.9.4",
    "zipp==3.17.0",
]
